deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: healthservice-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: healthservice-app
    template:
       metadata:
          labels:
             app: healthservice-app
       spec:
          containers:
          - name: healthservice-app
            image: otusarchitectpopov/hw01:healthservice
            ports:
              - containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 60
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 60
              periodSeconds: 5
