service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthservice-service
spec:
  selector:
    app: healthservice-app
  ports:
    - protocol: TCP
      port: 8000
  type: NodePort
